# ECS

./: .gitignore  CMakeLists.txt  README.md  example.h  main.cpp
include/ECS/: API.h  ECS.h  Engine.h  Platform.h
include/ECS/component/: Component.h  ComponentManager.h  IComponent.h
include/ECS/entity/: Entity.h  EntityManager.h  IEntity.h
include/ECS/event/: Event.h  EventDelegate.h  EventDispatcher.h  EventHandler.cpp  EventHandler.h  IEvent.cpp  IEvent.h  IEventDelegate.h  IEventDispatcher.h  IEventListener.cpp  IEventListener.h
include/ECS/memory/: ECSMM.h  MemoryChunkAllocator.h
include/ECS/memory/allocator/: IAllocator.h  LinearAllocator.h  PoolAllocator.h  StackAllocator.h
include/ECS/system/: ISystem.h  System.h  SystemManager.h
include/ECS/util/: FamilyTypeID.h
src/: API.cpp
src/ECS/: ComponentManager.cpp  Engine.cpp  EntityManager.cpp  IComponent.cpp  IEntity.cpp  ISystem.cpp  SystemManager.cpp
src/ECS/memory/: ECSMM.cpp
src/ECS/memory/allocator/: IAllocator.cpp  LinearAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp
src/ECS/util/: FamilyTypeID.cpp
